--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "biome lint --write ./src"
+    "lint": "biome lint ./src",
+    "format": "biome format ./src",
+    "check": "biome check ./src"
   },
   "dependencies": {
     "react": "^19.0.0",
