--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "check": "biome check ./src"
   },
   "dependencies": {
+    "next": "15.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.2.0"
+    "tailwind-variants": "^1.0.0"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
