Change formatter rules

--- a/biome.json
+++ b/biome.json
@@ -31,8 +31,7 @@
   },
   "javascript": {
     "formatter": {
-      "quoteStyle": "single",
-      "jsxQuoteStyle": "single"
+      "quoteStyle": "single"
     }
   }
 }
