--- a/biome.json
+++ b/biome.json
@@ -21,6 +21,9 @@
     "enabled": true,
     "rules": {
       "recommended": true,
+      "a11y": {
+        "noSvgWithoutTitle": "off"
+      },
       "nursery": {
         "useSortedClasses": {
           "level": "warn",
