--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "15.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.0.2",
     "tailwind-variants": "^1.0.0"
   },
   "devDependencies": {
