--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "check": "biome check ./src"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.1",
+    "lucide-react": "^0.487.0",
     "next": "15.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
