--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.1",
     "axios": "^1.8.4",
+    "iron-session": "^8.0.4",
     "lucide-react": "^0.487.0",
     "next": "15.2.0",
     "react": "^19.0.0",
