--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.1",
+    "@radix-ui/react-slot": "^1.2.3",
     "axios": "^1.8.4",
+    "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
     "iron-session": "^8.0.4",
-    "lucide-react": "^0.487.0",
+    "lucide-react": "^0.515.0",
     "next": "^15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.0.2",
+    "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^1.0.0"
   },
   "devDependencies": {
