--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "iron-session": "^8.0.4",
     "lucide-react": "^0.515.0",
     "next": "^15.3.5",
+    "radix-ui": "^1.4.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.3.1",
