--- a/biome.json
+++ b/biome.json
@@ -44,6 +44,9 @@
         "noInferrableTypes": "error",
         "noUselessElse": "error"
       }
+    },
+    "domains": {
+      "react": "recommended"
     }
   },
   "javascript": {
